# unnoficial-habitica-cli

./: .travis.yml  Cargo.toml  README.md
ci/: publish.sh
src/: main.rs
src/config/: mod.rs
src/task/: mod.rs  printer.rs
