[package]
name = "habitica-cli"
version = "0.1.4"
authors = ["Dawson Israel <dawfre@amazon.com>"]
license = "MIT"
description = "Unnoficial Habitica Rust Cli"

[badges]
travis-ci = { repository = "dawsonfi/habitica-cli", branch = "master" }
codecov = { repository = "dawsonfi/habitica-cli", branch = "master", service = "github" }

[dependencies]
clap = "2.31.2"
habitica_rust_client = "0.1.5"
preferences = "^1.1.0"
colored = "1.6"